fix: adjust z-index to allow clicking buttons in footer

--- a/src/app.scss
+++ b/src/app.scss
@@ -54,8 +54,7 @@ h1, h2, h3, h4{
 .slides-container {
   position: fixed;
   inset: 0;
-  z-index: 10;
-  pointer-events: none;
+  z-index: 0;
 }
 
 .slide {
